<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.luvira.myvoice.SignUpActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:text="@string/sign_up_header"
        android:id="@+id/signUpHeader"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:paddingRight="20dp"
        android:layout_marginTop="40dp" />

    <TextView
        android:id="@+id/signUpSubHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_sub_header"
        android:layout_below="@+id/signUpHeader"
        android:layout_alignLeft="@+id/signUpHeader"
        android:paddingTop="5dp"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/usernameFormText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username_form_text"
        android:textSize="18sp"
        android:layout_below="@+id/signUpSubHeader"
        android:layout_marginTop="30dp"
        android:layout_alignLeft="@+id/signUpHeader"
        android:paddingLeft="10dp"/>

    <EditText
        android:id="@+id/usernameFormEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/usernameFormText"
        android:hint="@string/username_form_hint"
        android:layout_toRightOf="@+id/passwordConfirmText"
        android:layout_alignRight="@+id/emailFormEdit"/>

    <TextView
        android:id="@+id/emailFormText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_form_text"
        android:textSize="18sp"
        android:layout_below="@+id/usernameFormText"
        android:layout_marginTop="16dp"
        android:layout_alignLeft="@+id/signUpHeader"
        android:paddingLeft="10dp"/>

    <EditText
        android:id="@+id/emailFormEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/emailFormText"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:layout_toRightOf="@+id/passwordConfirmText"/>

    <TextView
        android:id="@+id/passwordFormText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_form_text"
        android:textSize="18sp"
        android:layout_below="@+id/emailFormText"
        android:layout_marginTop="16dp"
        android:layout_alignLeft="@+id/signUpHeader"
        android:paddingLeft="10dp"/>

    <EditText
        android:id="@+id/passwordFormEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/passwordFormText"
        android:inputType="textPassword"
        android:layout_toRightOf="@+id/passwordConfirmText"
        android:layout_alignRight="@+id/emailFormEdit"/>

    <TextView
        android:id="@+id/passwordConfirmText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_confirm_form_text"
        android:textSize="18sp"
        android:layout_below="@+id/passwordFormText"
        android:layout_marginTop="16dp"
        android:layout_alignLeft="@+id/signUpHeader"
        android:paddingLeft="10dp"/>

    <EditText
        android:id="@+id/passwordConfirmEdit"
        android:inputType="textPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/passwordConfirmText"
        android:layout_toRightOf="@+id/passwordConfirmText"
        android:layout_alignRight="@+id/emailFormEdit"/>

    <Button
        android:id="@+id/signButton"
        android:onClick="onClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordConfirmText"
        android:layout_alignLeft="@+id/passwordConfirmEdit"
        android:layout_alignRight="@+id/emailFormEdit"
        android:layout_marginTop="20dp"
        android:text="@string/sign_up_button"/>
</RelativeLayout>
