<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.luvira.myvoice.ViewNoteActivity">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >



<android.support.v7.widget.CardView
    android:id="@+id/noteCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:onClick="onClick"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Vanity Note"
            android:id="@+id/noteTitle"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:paddingLeft="5dp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/noteCategoryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/noteTitle"
            android:layout_marginTop="10dp"
            android:text="Category:"
            android:textSize="14sp"
            android:paddingLeft="10dp"
            android:layout_alignParentLeft="true"/>

        <TextView
            android:id="@+id/noteCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/noteTitle"
            android:layout_toRightOf="@id/noteCategoryText"
            android:layout_alignBaseline="@id/noteCategoryText"
            android:layout_marginTop="10dp"
            android:text="Vanity"
            android:textSize="14sp"
            android:paddingLeft="5dp"/>

        <TextView
            android:id="@+id/noteOwner"
            android:onClick="onClick"
            android:textColor="@color/bg_screen2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/noteTitle"
            android:layout_marginTop="10dp"
            android:text="@string/content_owner"
            android:textSize="14sp"
            android:paddingRight="10dp"
            android:layout_alignParentRight="true"/>

        <TextView
            android:id="@+id/noteOwnerBy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/noteTitle"
            android:layout_toLeftOf="@+id/noteOwner"
            android:layout_alignBaseline="@+id/noteOwner"
            android:layout_marginTop="10dp"
            android:text="by"
            android:textSize="14sp"
            android:paddingRight="5dp"/>



        <TextView
            android:id="@+id/noteContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/noteOwner"
            android:layout_marginTop="12dp"
            android:text="@string/content_temp"
            android:textSize="16sp"
            android:padding="10dp"
            android:lineSpacingExtra="5dp"
            />
    </RelativeLayout>

</android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/addCommentHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/noteCard"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:text="@string/add_comment_header"
        android:textSize="18dp"
        />

    <EditText
        android:id="@+id/addCommentEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addCommentHeader"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:lines="2"
        />

    <Button
        android:id="@+id/saveCommentButton"
        android:onClick="onClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addCommentEdit"
        android:text="@string/save_comment_button"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        />

    <android.support.v7.widget.CardView
        android:id="@+id/commentCard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/saveCommentButton"
        android:layout_margin="5dp"
        android:onClick="onClick"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/commentHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comment_header"
                android:layout_marginTop="10dp"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"/>

            <!--<TextView-->
                <!--android:id="@+id/myempty"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="No Comments to Display"-->
                <!--/>-->

            <ListView
                android:id="@+id/commentsList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/commentHeader"
                ></ListView>
        </RelativeLayout>


    </android.support.v7.widget.CardView>

</RelativeLayout>
    </ScrollView>
